# elevenlabs-docs

./: .cursorrules  .env  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  README.md  README_api_key_migration.md  WHATSAPP_ELEVENLABS_INTEGRATION_GUIDE.md  add_api_key_column_migration.sql  android-sentry-config-instructions.md  changelog-context-generation.sh  changelog-prompt.txt  collected-snippets.mdx  conversational-ai-swift-sdk-docs.md  fdr.json  fetch-xi-prs.sh  find_hackathons.sh  getting-started.mdx  hackathon_opportunities_report.md  hackathon_sponsorship_opportunities_2025.md  introduction.mdx  link-checker.sh  mint.json  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  quickstart.mdx  snippets.js  styles.css  tsconfig.json  welcome.mdx
api-reference/: add-chapter.mdx  add-from-file.mdx  add-project.mdx  audio-isolation-stream.mdx  audio-isolation.mdx  authentication.mdx  conversational-ai.mdx  convert-chapter.mdx  convert-project.mdx  create-dub.mdx  delete-chapter.mdx  delete-dub.mdx  delete-project.mdx  delete-sample.mdx  delete-voice.mdx  edit-voice-settings.mdx  gaming-text-to-speech-guide.mdx  generate-voice-parameters.mdx  generate-voice.mdx  get-audio-from-history-item.mdx  get-audio-from-sample.mdx  get-chapter-by-id.mdx  get-chapter-snapshots.mdx  get-chapters.mdx  get-conversational-ai-agent.mdx  get-conversational-ai-agents.mdx  get-conversational-ai-conversation.mdx  get-conversational-ai-conversations.mdx  get-conversational-ai-signed-url.mdx  get-default-voice-settings.mdx  (+82 more)
(+904 files in other folders)
