[tool.poetry]
name = "elevenlabs-developer-experience"
version = "0.1.0"
description = ""
authors = ["ElevenLabs developers <developers@elevenlabs.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
elevenlabs = "*" # always use the latest version
black = "^24.10.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 